# model-serve

./: .env.example  .gitignore  README.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  commit.instructions.md  docker.instructions.md  documentation.instructions.md  frontend.instructions.md
agent_docs/: api_design.md  architecture.md  backend.md  database.md  docker.md  frontend.md
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260305_000001_initial_schema.py  20260306_000002_drop_served_models.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  health.py  keys.py  models.py  serve.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  api_key.py  base.py  served_model.py  user.py
backend/app/schemas/: auth.py  common.py  keys.py  models.py  serve.py
backend/app/services/: api_key.py  auth.py  huggingface.py  vllm_manager.py
backend/app/utils/: error_codes.py  exceptions.py
backend/tests/: conftest.py  test_routes.py  test_security.py
docker/: README.md  backend.Dockerfile  compose.base.yml  compose.cuda.yml  compose.local.yml  compose.rocm.yml  frontend.Dockerfile
docs/: api.md  architecture.md  deployment.md  frontend-migration-reference.md  rocm-container-troubleshooting.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: login-form.tsx  signup-form.tsx
frontend/src/hooks/: useAuth.ts  useKeys.ts  (+2 more)
(+17 files in other folders)
